plugins {
    id 'java'
    id 'application'
}

group = 'camp.nextstep.edu'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'wordle.infrastructure.App'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

test {
    useJUnitPlatform()
}
